# Quipay

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  VAULT_EVENTS_IMPLEMENTATION.md  backend-api-load.js  docker-compose.override.yml  jest.config.cjs  package-lock.json  package.json
.github/workflows/: api-contract-tests.yml  backend.yml  build.yml  frontend-preview.yml
backend/: .env.example  dredd.yml  hooks.js  package-lock.json  package.json
backend/src/: api-contract-tests.yml  delivery.ts  health.ts  index.ts  logger.ts  metrics.ts  stellarListener.ts  swagger.ts  syncer.ts
backend/src/__tests__/: idempotency.test.ts  (+7 more)
contracts/: README_FUZZ.md
developer-hub/blog/: 2025-01-01-quipay-launch.md
docs/: CONTRACTS.md  STORAGE_MIGRATION.md
fuzz/: Cargo.toml
fuzz/src/: lib.rs
playwright-report/: index.html
src/: App.tsx
src/components/: BugReportModal.tsx  ConnectAccount.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FundAccountButton.tsx  LanguageSwitcher.tsx  OnboardingTour.tsx  StreamCreator.tsx  TransactionProgressOverlay.tsx  TransactionSimulationModal.tsx  VirtualizedTable.tsx  WalletButton.tsx  WalletConnect.tsx  Wizard.tsx
src/contracts/: payroll_vault.ts
src/hooks/: useNetworkStatus.ts  usePayroll.ts  useTxLifecycle.ts
src/pages/: CreateStream.tsx  EmployerDashboard.tsx  Home.tsx  Reports.tsx  StreamComparison.tsx  TestReceipt.tsx  TreasuryManagement.tsx  WithdrawPage.tsx  WorkerDashboard.tsx
src/test/: jest.setup.ts
src/util/: simulationUtils.ts
tests/: README.md  reports-virtualization.spec.ts
tests/e2e/: receipt-download.spec.ts
(+67 files in other folders)
