[package]
name = "quipay-fuzz"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
soroban-sdk = "=23.4.0"
payroll_vault = { path = "../contracts/payroll_vault" }
payroll_stream = { path = "../contracts/payroll_stream" }
quipay_common = { path = "../contracts/common" }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

[lib]
name = "quipay_fuzz"
path = "src/lib.rs"

[[bin]]
name = "fuzz_vault_deposit"
path = "src/bin/fuzz_vault_deposit.rs"
test = false
doc = false

[[bin]]
name = "fuzz_stream_create"
path = "src/bin/fuzz_stream_create.rs"
test = false
doc = false

[[bin]]
name = "fuzz_stream_claim"
path = "src/bin/fuzz_stream_claim.rs"
test = false
doc = false
